--- a/src/main/webapp/vistas/solicitudesInternet/Create.xhtml
+++ b/src/main/webapp/vistas/solicitudesInternet/Create.xhtml
@@ -192,7 +192,7 @@
                           
                          </p:panelGrid> 
                              <p:commandButton actionListener="#{solicitudesInternetController.create}" value="#{bundle.Save}" update="display,:SolicitudesInternetListForm:datalist,:growl" oncomplete="handleSubmit(args,'SolicitudesInternetCreate');"/>
-                            <p:commandButton value="#{bundle.Cancel}" onclick="SolicitudesInternetCreateSI.hide()"/>
+                             <p:commandButton value="#{bundle.Cancel}" oncomplete="SolicitudesInternetCreateForm.hide()"/>
                          </p:panel>
                     </p:tab>
                 </p:wizard>
