--- a/src/main/webapp/vistas/solicitudesInternet/Create.xhtml
+++ b/src/main/webapp/vistas/solicitudesInternet/Create.xhtml
@@ -127,7 +127,7 @@
                         </p:tab>
                      
                      <p:tab title="Confirmar">
-                         <p:panel header="Detalles de periodos">
+                         <p:panel header="Informacion de la nueva solicitud">
                                <p:panelGrid columns="2"  class="panelGridNoBorder" layout="grid">
                                 <p:panelGrid columns="2" class="panelGridNoBorder" rendered="#{solicitudesInternetController.selected != null}">
                                     <f:facet name="header">
