--- a/src/main/webapp/vistas/gestores/List.xhtml
+++ b/src/main/webapp/vistas/gestores/List.xhtml
@@ -14,19 +14,26 @@
         <ui:define name="body">
             <h:form id="GestoresListForm">
                 <p:panel header="#{bundle.ListGestoresTitle}">
-                    
+                    <p:contextMenu for="datalist">                       
+                        <p:menuitem value="#{bundle.Create}" icon="ui-icon-plus" update=":GestoresCreateForm" actionListener="#{gestoresController.prepareCreate}" oncomplete="PF('GestoresCreateDialog').show()"/>
+                        <p:menuitem value="#{bundle.View}" icon="ui-icon-search" update=":GestoresViewForm" oncomplete="PF('GestoresViewDialog').show()"/>
+                        <p:menuitem value="#{bundle.Edit}" icon="ui-icon-pencil" update=":GestoresEditForm" oncomplete="PF('GestoresEditDialog').show()"/>
+                    </p:contextMenu>
                     <p:dataTable widgetVar="datalist" id="datalist" value="#{gestoresController.items}" var="item"
                                  selectionMode="single" selection="#{gestoresController.selected}"
                                  paginator="true"
                                  rowKey="#{item.gestor}"
                                  rows="10"
                                  rowsPerPageTemplate="10,20,30,40,50"                               
-                                 resizableColumns="true"                                                                  
+                                 resizableColumns="true"
+                                  
                                  >
                         <p:ajax event="rowSelect"   update="createButton viewButton editButton"/>
                         <p:ajax event="rowUnselect" update="createButton viewButton editButton"/>
                         <f:facet name="header">
-                            <p:commandButton update="datalist" value="Update"  icon="ui-icon-refresh" oncomplete="PF('datalist').clearFilters()"/>
+                            <p:commandButton id="toggler" type="button" value="Columns" style="float:right" icon="ui-icon-calculator" />
+                            <p:columnToggler datasource="datalist" trigger="toggler" />
+                            <p:commandButton update="datalist" value="Update" style="float:right" icon="ui-icon-refresh" oncomplete="PF('datalist').clearFilters()"/>
                         </f:facet>
                         <p:column headerText="#{bundle.ListGestoresTitle_gestor}" width="07%" filterBy="#{item.gestor}" filterMatchMode="contains">       
                             <h:outputText value="#{item.gestor}"/>
