--- a/src/main/webapp/vistas/solicitudesInternet/List.xhtml
+++ b/src/main/webapp/vistas/solicitudesInternet/List.xhtml
@@ -6,19 +6,17 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template.xhtml">
-
-
+    <h:body>
+    <ui:composition template="/templates/templateBase.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.ListSolicitudesInternetTitle}"></h:outputText>
- 
-        </ui:define>
-
-        <ui:define name="body">              
+            <h:outputText value="#{bundle.ListSolicitudesInternetTitle}"></h:outputText> 
+        </ui:define> 
+        <ui:define name="body">
             <h:form id="SolicitudesInternetListForm">
                 <p:panel header="#{bundle.ListSolicitudesInternetTitle}">
                     <p:dataTable id="datalist" value="#{solicitudesInternetController.items}" var="item"
                                  selectionMode="single" selection="#{solicitudesInternetController.selected}"
+                                 resizableColumns="false"
                                  paginator="true"
                                  rowKey="#{item.solicitud}"
                                  rows="10"
@@ -28,7 +26,7 @@
                         <p:ajax event="rowSelect"   update=" viewButton editButton deleteButton"/>
                         <p:ajax event="rowUnselect" update=" viewButton editButton deleteButton"/>
 
-                        <p:column>
+                        <p:column resizable="false">
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListSolicitudesInternetTitle_solicitud}"/>
                             </f:facet>
@@ -99,13 +97,14 @@
                     </p:dataTable>
                 </p:panel>
             </h:form>
-
-
             <ui:include src="Create.xhtml"/>
             <ui:include src="Edit.xhtml"/>
-            <ui:include src="View.xhtml"/>            
+            <ui:include src="View.xhtml"/>                       
+            </ui:define>
+        <ui:define name="footer">
             
         </ui:define>
+            
     </ui:composition>
-
+</h:body>
 </html>
